aws/RouteTables-eu-west-1.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "RouteTableAssociationId": "rtbassoc-86fef6e3", 
     "Main": true, 
     "RouteTableId": "rtb-e5d3e680"
    }
   ], 
   "RouteTableId": "rtb-e5d3e680", 
   "VpcId": "vpc-6783c902", 
   "PropagatingVgws": [], 
   "Tags": [], 
   "Routes": [
    {
     "GatewayId": "local", 
     "DestinationCidrBlock": "172.31.0.0/16", 
     "State": "active", 
     "Origin": "CreateRouteTable"
    }, 
    {
     "GatewayId": "igw-bc78e8d9", 
     "DestinationCidrBlock": "0.0.0.0/0", 
     "State": "active", 
     "Origin": "CreateRoute"
    }
   ]
  }
 ]
}
